--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -54,16 +54,15 @@ jobs:
     - name: Run Suite
       working-directory: ${{ github.workspace }}
       run: |
-        # Set up paths in this cmd shell.
+        echo ------ Setting up paths ------
         7z x c:\projects\install\ninja.zip -oc:\projects\install\ninja > nul
         set PATH=c:\projects\install\ninja;%PATH%
         7z x c:\projects\install\doxygen.zip -oc:\projects\install\doxygen > nul
         set PATH=c:\projects\install\doxygen;%PATH%
         dir "c:\Program Files (x86)\WiX Toolset"*
         set PATH=C:\Program Files (x86)\WiX Toolset v3.11\bin;%PATH%
-        # Set up VS2017 env vars.
         call "C:/Program Files (x86)/Microsoft Visual Studio/2017/Enterprise/VC/Auxiliary/Build/vcvars32.bat"
+        echo ------ Running suite ------
         echo PATH is "%PATH%"
         echo Running in directory "%CD%"
-        dir c:\perl.exe /b/s
-        perl tests/runsuite_wrapper.pl travis use_ninja
+        c:\msys64\usr\bin\perl tests/runsuite_wrapper.pl travis use_ninja
