--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -109,7 +109,7 @@ jobs:
         perl tests/runsuite_wrapper.pl travis use_ninja 64_only debug_only
 
   # drheapstat and release builds:
-  vs2017-aux-builds:
+  vs2017-builds:
     runs-on: windows-2016
 
     steps:
