i#2323 GA CI: Add auto-cancellation of prior PR jobs
Follows the lead of DynamoRIO/dynamorio#4585 and adds
auto-cancellation of a prior running job on a PR CI trigger.  Pushes
to master are never canceled.

Issue: #2323, DynamoRIO/dynamorio#4585

--- a/.github/workflows/ci-clang.yml
+++ b/.github/workflows/ci-clang.yml
@@ -47,6 +47,12 @@ jobs:
       with:
         submodules: true
 
+    # Cancel any prior runs for a PR (but do not cancel master branch runs).
+    - uses: n1hility/cancel-previous-runs@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+      if: ${{ github.event_name == 'pull_request' }}
+
     - name: Fetch Sources
       run: git fetch --no-tags --depth=1 origin master
 
